# Tesis-precursores-sismicos

./: .gitignore
Tesis/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
Tesis/Scripts/: configurar_hora  estado  inicio_muestreo  inicio_muestreo_async  inicio_muestreo_epoch  reiniciar
Tesis/main/: CMakeLists.txt  component.mk  configuraciones.h  data_types.h  main.c  main.h  pinout.h  wifi.c  wifi.h
Tesis/main/GPIO/: GPIO.c
Tesis/main/adc/: adc.c  adc.h
Tesis/main/button/: button.c  button.h
Tesis/main/command/: command.c  command.h
Tesis/main/data_packets/: data_packet.c  data_packet.h
Tesis/main/directory_manager/: directory_manager.c  directory_manager.h
Tesis/main/file_server/: file_server.c  file_server.h
Tesis/main/funciones_nodo/: GPIO.h  acelerometroI2C.c  acelerometroI2C.h  mqtt.c  mqtt.h  tareas.c  tareas.h  timer_muestreo.c  timer_muestreo.h  varias.c  varias.h
Tesis/main/mpu_9250/: mpu9250.c  mpu9250.h
Tesis/main/mpu_9250/example/: mpu9250_example.c
Tesis/main/mqtt/: mqtt.c  mqtt.h
Tesis/main/rtc/: rtc.c  rtc.h
Tesis/main/sd_card/: sd_card.c  sd_card.h
Tesis/main/sd_card/example/: sd_card_example.c
Tesis/main/time_manager/: time_manager.c  time_manager.h
Tesis/main/watchdog/: watchdog.c  watchdog.h
Tesis/main/wifi/: wifi.c  wifi.h
Tesis/main/wifi/example/: example.c
