idf_component_register(
        SRCS    "main.c"
                "wifi/wifi.c"
                "file_server/file_server.c"
                "mpu_9250/mpu9250.c"
                "button/button.c"
                "watchdog/watchdog.c"
                "adc/adc.c"
                "sd_card/sd_card.c"
                )