idf_component_register(
        SRCS    "main.c"
                "wifi/wifi.c"
                "mpu_9250/mpu9250.c"
                "button/button.c"
                "watchdog/watchdog.c"
                "adc/adc.c"
                "sd_card/sd_card.c"
                "mqtt/mqtt.c"
                "data_packets/data_packet.c"
                "time_manager/time_manager.c"
                "directory_manager/directory_manager.c"
                "command/command.c"
                )